# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

shared_library("rt5370") {
  sources = [
    "binding.c",
    "device.cpp",
    "driver.cpp",
  ]

  libs = [
    "ddk",
  ]

  data_deps = [ ":rt5370-firmware" ]
}

copy("rt5370-firmware") {
  sources = [ "rt2870.bin" ]
  outputs = [ "$root_out_dir/rt2870.bin" ]
}
